--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   
 </head>
-<body>
+<body style="background: rgb(209, 209, 224);">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -44,8 +44,8 @@
 </nav>
   
 <div class="container">
-  <h3>teste</h3>
-  <p class="text-danger">This text represents danger.</p>
+  
+  
   
 </div>
 
