--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
         </ul>
       </li>
 
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Repositories <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li ><a href="#"class="text-danger">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li ><a href="#"class="text-danger"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
         </ul>
       </li>
       
@@ -44,7 +44,15 @@
 </nav>
   
 <div class="container">
-  
+  <h2>Pedro Henrique Godoy</h2>
+  <br>
+  <h4><p>Sou estudante de engenharia de software, moro em  Ribeirao Preto e estarei unsando este github para postar meus codigos e projetos.  </p></h4>
+  <br>
+  <h4>Formação: Cursando engenharia de software (3º semestre/Unaerp)</h4>
+  <br>
+  <h4>Contato: phgodoy12@gmail.com</h4>
+  <br>
+  <h4><p>Interessado em tecnologia com maior foco em inteligência artificial , games,carde games e series .   </p></h4>
   
   
 </div>
