--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,29 +49,28 @@
   </ul>
 </nav>
 <br>
-  
-<div class="container"class="jumbotron">
-  <h2>Pedro Henrique Godoy</h2>
-  <br>
-  <hr>
-  <h2>Resumo:</h2>
-  <br>
-  <h4><p>Sou estudante de engenharia de software, moro em  Ribeirao Preto e estarei unsando este github para postar meus codigos e projetos.  </p></h4>
-  <br>
-  <hr>
-  <h2>Formação:</h2>
-  <h4> Cursando engenharia de software (3º semestre/Unaerp)</h4>
-  <br>
-  <hr>
-  <h2>Contato:</h2>
-  <h4> phgodoy12@gmail.com</h4>
-  <br>
-  <hr>
-  <h2>Interesses:</h2>
-  <h4><p>Interessado em tecnologia com maior foco em inteligência artificial , games,carde games e series .   </p></h4>
-  
-  
+
+<div class="jumbotron jumbotron-fluid" style="background: rgb(209, 209, 224);">
+  <div class="container">
+    <h1 class="display-4" >Pedro Henrique Godoy </h1>
+    <hr>
+    <br>
+    <h1 class="display-4">Resumo:</h1>
+    <p class="lead">Sou estudante de engenharia de software, moro em  Ribeirao Preto e estarei unsando este github para postar meus codigos e projetos.</p>
+    <hr>
+    <h1 class="display-4">Formação:</h1>
+    <p class="lead">Cursando engenharia de software (3º semestre/Unaerp)</p>
+    <hr>
+    <h1 class="display-4">Contato: </h1>
+    <p class="lead">phgodoy12@gmail.com </p>
+    <hr>
+    <h1 class="display-4">Interesses: </h1>
+    <p class="lead">Interessado em tecnologia com maior foco em inteligência artificial , games,carde games e series .  </p>
+    <hr>
+  </div>
 </div>
-<hr>
+  
+
+
 </body>
 </html>
