--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <p class="lead">phgodoy12@gmail.com </p>
     <hr>
     <h1 class="display-5">Interesses: </h1>
-    <p class="lead">Interessado em tecnologia com maior foco em inteligência artificial , games,carde games e series .  </p>
+    <p class="lead">Interessado em tecnologia com maior foco em inteligência artificial , games,card games e series .  </p>
     <hr>
   </div>
 </div>
