--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <hr>
     <br>
     <h1 class="display-5">Resumo:</h1>
-    <p class="lead">Sou estudante de engenharia de software, moro em  Ribeirao Preto e estarei unsando este github para postar meus codigos e projetos.</p>
+    <p class="lead">Sou estudante de engenharia de software, moro em  Ribeirao Preto e estarei usando este repositorio para postar meus codigos e projetos.</p>
     <hr>
     <h1 class="display-5">Formação:</h1>
     <p class="lead">Cursando engenharia de software (3º semestre/Unaerp)</p>
